# epysuite

./: .gitignore  LICENSE  MANIFEST.in  README.md  cas_rns.txt  epi_inp.txt  parse_smile_cas.py  pyproject.toml  requirements.txt  run_episuite_stp.py  run_episuite_stp_p.py  temp.py  tox.ini
notebooks/: epysuite_tutorial.ipynb
src/epysuite/: __init__.py  config.py  exceptions.py  runner.py  utils.py
src/epysuite/templates/: __init__.py  stpvalsx
tests/: conftest.py  test_runner.py  test_utils.py
