[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epysuite"
version = "0.1.0"
description = "A Python interface for EPI Suite"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["episuite", "chemistry", "environment"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "polars>=0.19.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/epysuite"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=epysuite"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 120
target-version = "py38"